force-app/main/default/objects/User/fields/SBQQ__DiagnosticToolEnabled__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DiagnosticToolEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable to run pricing diagnostics during a Quote Line Editor Calculate.</description>
        <inlineHelpText>Use to enable CPQ Diagnostic Tool, only available if org setting is enabled. Contact support to enable this capability.</inlineHelpText>
        <label>Enable Diagnostic Tool</label>
        <type>Checkbox</type>
    </CustomField>