force-app/main/default/objects/User/fields/SBQQ__Theme__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Theme__c</fullName>
        <description>Field that will be set by Select Theme custom link, once one is selected.</description>
        <label>Theme</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>