force-app/main/default/objects/User/fields/userid_18__c.field-meta.xml
<CustomField>
        <fullName>userid_18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>userid(18)</label>
        <type>Text</type>
    </CustomField>